[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-esgf"
description = ''
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache 2.0"}
keywords = []
authors = [
  { name = "Bart Schilperoort", email = "b.schilperoort@esciencecenter.nl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "esmvalcore"
]

[project.urls]
Documentation = "https://github.com/WAM2layers/search-esgf#readme"
Issues = "https://github.com/WAM2layers/search-esgf/issues"
Source = "https://github.com/WAM2layers/search-esgf"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:search_esgf tests}"

[tool.coverage.run]
source_pkgs = ["search_esgf", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
search_esgf = ["search_esgf", "*/search-esgf/search_esgf"]
tests = ["tests", "*/search-esgf/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
